# georef_imageregistration

./: .gitignore  CMakeLists.txt  Common.h  IrgFileFunctions.py  IrgGeoFunctions.py  IrgIsisFunctions.py  IrgStringFunctions.py  README.md  README.txt  __init__.py  backlogHelperTool.py  backlog_processor.py  batch_register_images.py  computeImageRms.cpp  dbLogger.py  defaultSettings.py  detectImageTag.cpp  georefDbWrapper.py  initDatabase.txt  input_db_wrapper.py  offline_config.py  offline_config_devel.py  offline_config_prod.py  output_generator.py  processingFunctions.h  registerGeocamImage.cpp  register_image.py  registration_common.py  registration_processor.py  source_database.py  source_image_utils.py  test_registration.py  utils.py
ImageFetcher/: __init__.py  fetchReferenceImage.py  miscUtilities.py
static/georef_imageregistration/: creation-args.txt  extras-args.txt
